--- a/code/web-src/com-sabre-redapp-fundamentals-web-module/package.json
+++ b/code/web-src/com-sabre-redapp-fundamentals-web-module/package.json
@@ -18,7 +18,8 @@
       "sabre-ngv-custom-forms": "*",
       "sabre-ngv-pos-cdm": "*",
       "sabre-ngv-commsg": "*",
-      "sabre-ngv-UIComponents": "*"
+      "sabre-ngv-UIComponents": "*",
+      "sabre-ngv-modals": "*"
     },
     "concierge_version_min": "5.11.1",
     "runtimeDependencies": {},
@@ -33,6 +34,7 @@
     "sabre-ngv-custom-forms": "*",
     "sabre-ngv-pos-cdm": "*",
     "sabre-ngv-commsg": "*",
-    "sabre-ngv-UIComponents": "*"
+    "sabre-ngv-UIComponents": "*",
+    "sabre-ngv-modals": "*"
   }
 }
