availability widget, выбор сегмента и класса обслуживания, отображение типа самолета (equipment)

--- a/code/web-src/com-sabre-redapp-fundamentals-web-module/package.json
+++ b/code/web-src/com-sabre-redapp-fundamentals-web-module/package.json
@@ -19,7 +19,9 @@
       "sabre-ngv-pos-cdm": "*",
       "sabre-ngv-commsg": "*",
       "sabre-ngv-UIComponents": "*",
-      "sabre-ngv-modals": "*"
+      "sabre-ngv-modals": "*",
+      "sabre-ngv-pricing": "*",
+      "sabre-ngv-airAvailability": "*"
     },
     "concierge_version_min": "5.11.1",
     "runtimeDependencies": {},
@@ -35,6 +37,8 @@
     "sabre-ngv-pos-cdm": "*",
     "sabre-ngv-commsg": "*",
     "sabre-ngv-UIComponents": "*",
-    "sabre-ngv-modals": "*"
+    "sabre-ngv-modals": "*",
+    "sabre-ngv-pricing": "*",
+    "sabre-ngv-airAvailability": "*"
   }
 }
